@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3662 utf-8
+personal_ws-1.1 en 3663 utf-8
 AAC
 AAS
 ABI
@@ -2195,6 +2195,7 @@ getenv
 gethostbyname
 getopt
 getproctag
+getter
 gettext
 gettextize
 getval
